# Precision-Farming-Robot-2.0

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REFERENCE.md  CONTRIBUTING.md  LICENSE  Meshy_AI_Mobile_Electronics_Wo_0412135519_texture.mtl  QUICKSTART.md  README.md  Run_ROS2_with_docker.md  TEST_RESULTS.md  Weed_Detection_YOLO_FYP.ipynb  detect_weed.py  infer.py  requirements.txt  run_all_tests.sh  train_weed_detection.ipynb  train_weed_detection.py  visualize_gt.py
.github/: copilot-instructions.md
data/: analyze_data.py  sample_data.csv
desktop-client/: ARCHITECTURE.md  CHECKLIST.md  CLAUDE.md  CMakeLists.txt  Dockerfile  INTEGRATION_SUMMARY.md  PRD.md  PROJECT_SUMMARY.md  README.md  build.sh  build_docker.sh  fastdds.xml  fastdds_config.xml  install_dependency.sh  package.xml  resources.qrc  robot.mtl  run.sh  setup_ros2_pi.sh  start_docker.sh  theme.qss
desktop-client/.copilot/: expert-cpp-software-engineer.agent.md
desktop-client/.github/: copilot-instructions.md
desktop-client/docs/: ARCHITECTURE.md  BUFFER_FEATURES.md  DIAGRAMS.md  DOCUMENTATION_INDEX.md  FILE_STRUCTURE.md  QUICKSTART.md  ROS2-Communication.md  ROS2_NODES.md
desktop-client/src/: main.cpp
desktop-client/src/core/: Application.cpp  Application.h  WidgetManager.cpp  WidgetManager.h
desktop-client/src/rendering/: ModelGLView.cpp  ModelGLView.h  OBJLoader.cpp  OBJLoader.h  OBJMesh.h
desktop-client/src/ros2/: ROS2Interface.cpp  ROS2Interface.h
desktop-client/src/tests/: CMakeLists.txt  test_logger.cpp  test_main.cpp  test_ros2_interface.cpp  test_widget_manager.cpp
desktop-client/src/twin/: DigitalTwin.cpp  DigitalTwin.h  TwinSimulator.cpp  TwinSimulator.h  TwinState.cpp  TwinState.h
desktop-client/src/ui/: MainWindow.cpp  MainWindow.h  MaterialDockWidget.cpp  MaterialDockWidget.h
desktop-client/src/ui/widgets/: BaseWidget.cpp  BaseWidget.h  CommandControlWidget.cpp  CommandControlWidget.h  CoordinatesWidget.cpp  CoordinatesWidget.h  CurrentDetectionWidget.cpp  CurrentDetectionWidget.h  DetectionPanelWidget.cpp  DetectionPanelWidget.h  DetectionSummaryWidget.cpp  DetectionSummaryWidget.h  IMU3DWidget.cpp  IMU3DWidget.h  LaserCalibrationWidget.cpp  LaserCalibrationWidget.h  MotionControlWidget.cpp  MotionControlWidget.h  RobotMapView.cpp  RobotMapView.h  RobotModelWidget.cpp  RobotModelWidget.h  SensorDataWidget.cpp  SensorDataWidget.h  SidebarWidget.cpp  SidebarWidget.h  StatusBadge.cpp  StatusBadge.h  TwinVisualizationWidget.cpp  TwinVisualizationWidget.h  VideoStreamWidget.cpp  VideoStreamWidget.h  ZoomableImageView.cpp  ZoomableImageView.h
desktop-client/src/utils/: Logger.cpp  Logger.h
docs/: CNAME  api_reference.md  hardware_setup.md  index.html  user_guide.md
docs/content/: 01-overview.md  02-hardware.md  03-firmware-motor.md  04-firmware-sensors.md  05-ros2-stack.md  06-computer-vision.md  07-desktop-client.md  08-mqtt-mobile.md  09-topics-api.md  10-getting-started.md
docs/diagrams/: gen.mjs
examples/: README.md  motor_test.ino  sensor_test.ino
firmware/: README.md  main.py  platformio.ini
firmware/include/: constants.h  motor_control.h  servo_control.h  signal_processor.h
firmware/src/: main.cpp  motor_control.cpp  servo_control.cpp  signal_processor.cpp
firmware_sensors/: README.md  main.py  platformio.ini
firmware_sensors/src/: main.cpp  (+3 more)
mobile-app/: README.md
raspberry-pi/: .gitignore  README.md
raspberry-pi/ros2_robot_ws/src/camera_sensor/: CMakeLists.txt  package.xml
raspberry-pi/ros2_robot_ws/src/camera_sensor/camera_sensor/: __init__.py  camera_node.py  video_loop_node.py  webcam_node.py
raspberry-pi/ros2_robot_ws/src/camera_sensor/include/camera_sensor/: camera_node.hpp
raspberry-pi/ros2_robot_ws/src/camera_sensor/src/: camera_node.cpp
raspberry-pi/ros2_robot_ws/src/imu_sensor/: CMakeLists.txt  package.xml
raspberry-pi/ros2_robot_ws/src/imu_sensor/include/imu_sensor/: imu_node.hpp
raspberry-pi/ros2_robot_ws/src/imu_sensor/src/: imu_node.cpp
raspberry-pi/ros2_robot_ws/src/motor_control/: CMakeLists.txt  package.xml
raspberry-pi/ros2_robot_ws/src/motor_control/include/motor_control/: motor_driver.hpp  spi_controller_bridge.hpp
raspberry-pi/ros2_robot_ws/src/motor_control/src/: motor_driver.cpp  spi_controller_bridge.cpp
raspberry-pi/ros2_robot_ws/src/mqtt_bridge/: CMakeLists.txt  mqtt_test_pub.py  package.xml
raspberry-pi/ros2_robot_ws/src/mqtt_bridge/mqtt_bridge/: mqtt_bridge_node.py
raspberry-pi/ros2_robot_ws/src/robot/: CMakeLists.txt  package.xml
raspberry-pi/ros2_robot_ws/src/robot/launch/: robot.launch.py
raspberry-pi/ros2_robot_ws/src/yolo_detection/: CMakeLists.txt  package.xml
raspberry-pi/ros2_robot_ws/src/yolo_detection/yolo_detection/: __init__.py  yolo_detection_node.py
ros2/: README.md
src/: config.h
tests/: test_sensors.cpp
weed-detection-node/: .gitignore  DOCKER_3_TERMINALS.md  DOCKER_GUIDE.md  Dockerfile  FIX_APPLIED.md  NEXT_STEPS.md  QUICKSTART.md  README.md  README_COMPLETE.md  REBUILD_NOW.md  START_HERE.md  SUCCESS.md  TEST_NOW.md  TEST_RESULTS.md  TROUBLESHOOT.md  build_docker.sh  check_topics.sh  docker-compose.test.yml  docker-compose.yml  generate_test_markers.py  generate_test_scenes.py  package.xml  rebuild_docker.sh  rebuild_docker_quick.sh  requirements.txt  run_docker.sh  run_pretty_viewer_docker.sh  run_processor_docker.sh  run_publisher_docker.sh  run_viewer_annotated_docker.sh  run_viewer_docker.sh  setup.cfg  setup.py  setup_network.sh  stop_all.sh  test_docker.sh  test_output_coordinates.json  test_ros2_full.sh  test_ros2_quick.sh  test_single_image.py  (+1 more)
weed-detection-node/desktop_app/: Dockerfile  README.md  SETUP_GUIDE.md  __init__.py  build_docker.sh  main.py  requirements.txt  run_docker.sh  run_local.sh
weed-detection-node/desktop_app/gui/: __init__.py  main_window.py  ros_thread.py
weed-detection-node/launch/: weed_detection_launch.py
weed-detection-node/tests/: run_all_tests.sh  test_image_publisher.py  test_image_viewer.py  test_pretty_viewer.py
weed-detection-node/weed_detection_node/: aruco_processor.py  image_publisher.py  image_viewer.py  pretty_viewer.py
(+43 files in other folders)
